# full-spectrum-engine

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml  requirements.txt  simulate.py
docs/: README.md  api-fields-and-errors-v0.9.md  api-fields-and-errors-v1.0.md  api-quick-contract-v1.0.md  api-reference-v0.8.md  api-reference-v0.9.md  api-reference-v1.0.md  explainability-walkthrough-v0.9.md  explainability-walkthrough-v1.0.md  getting-started-5min.md  github-release-v0.8.0-beta.md  github-release-v1.0.0.md  local-first-engine.md  public-preview-boundary.md  release-v0.7.2-alpha.md  release-v0.8.0-beta.md  release-v1.0.0.md  release-v1.5.0.md  rest-examples-v1.0.md  troubleshooting.md  v0.3-candidate-verification-2026-07-04.md  v0.8-public-beta-gap-list.md  v0.9-hardening-checklist.md  v1.0-gate-criteria.md  v1.0-gate-review-v0.9.0a1.md  v1.0-gate-review-v1.0.0.md  v1.0-release-checklist.md  warning-governance-v0.9.md  warning-governance-v1.0.md
examples/: README.md  api_curl_examples.sh  metrics_ecommerce_conflict.json  metrics_ecommerce_normal.json  metrics_logistics_conflict.json  metrics_logistics_normal.json  run_ecommerce_adapter.py  scenario_knowledge_conflict.json  scenario_logistics_coldchain.json  scenario_refund_conflict.json
experiments/: experiment_A_baseline.py  experiment_B_ess.py  experiment_C_l0_ess.py  experiment_D_guardian_short.py  experiment_E_guardian_long.py  experiment_F_frequency.py  experiment_G_threshold.py  experiment_H_stress.py
scripts/: convert_samples_to_gbrain.py  export_openapi.py  gen_v13_fixtures.py  generate_api_samples.py  qa_redline_verify_v15.py  selftest_v12_blackbox.py  selftest_v13_blackbox.py  selftest_v14_blackbox.py  selftest_v15_blackbox.py  validate-public-beta.ps1
src/: report_generator.py
(+192 files in other folders)
